--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,16 @@ body{
   background: rgb(131,58,180);
   background: linear-gradient(90deg, hsl(273, 75%, 66%) 0%, hsl(240, 73%, 65%) 100%); 
 }
+
+.faq-container{
+  background-color: #ffffff;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.faq-image{
+  display: flex;
+}
