--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,17 @@ body{
   font-family: 'Kumbh Sans', sans-serif;
 }
 
+/* --------  FAQ CONTAINER > Woman image && FAQ Content ----------*/
+
+.faq-container{
+  background-color: #ffffff;
+  margin:0 2rem;
+  margin-top: 150px;
+  min-height: 500px;
+  border-radius: 5%;
+}
+
+/*------------ WOMAN IMAGE ---------- */
 #woman-image{
   position: absolute;
   right: 57%;
@@ -20,13 +31,6 @@ body{
   transform: translate(50%,-50%);
 }
 
-.faq-container{
-  background-color: #ffffff;
-  margin:0 2rem;
-  margin-top: 150px;
-  min-height: 500px;
-}
-
 #faq-image{
   position: relative;
   width: 200px;
@@ -34,8 +38,30 @@ body{
   bottom: 10px;
 }
 
+ /*------------ END WOMAN IMAGE ----------- */
+
+ /* ----------- FAQ CONTENT ------------ */
+
+.faq-content{
+  padding-top: 150px;
+}
+
+
 .subtitle{
   font-size: 26px;
   text-align: center;
-  
+  margin-bottom: 30px;
+}
+
+.question{
+  border: none;
+  background: none;
+  font-size: 1rem;
+  width: 100%;
+  text-align: start;
+}
+
+.question:hover{
+  cursor: pointer;
+  color: #F47B56;
 }
